--- a/index.html
+++ b/index.html
@@ -217,7 +217,7 @@
                             </div>
 
                             <div class="cd-timeline-content service-box-content">
-                                <h2>轻松阅读</h2>
+                                <h2>优义正社交</h2>
                                  <h5>个人职责</h5>
                                 <ul>
                                     <li>整体框架搭建</li>
@@ -235,7 +235,7 @@
                             </div>
 
                             <div class="cd-timeline-content service-box-content">
-                                 <h2>五月雪影视 </h2>
+                                 <h2>米石科技 </h2>
                                 <ul>
                                     <li>运用HTML+CSS完成了整体布局,实现了前端页面模块搭建；</li>
                                     <li>运用jQuery来实现页面的动态效果</li>
@@ -251,7 +251,7 @@
                             </div>
 
                             <div class="cd-timeline-content service-box-content">
-                                 <h2>云锦医疗</h2>
+                                 <h2>美食录</h2>
                                 <ul>
                                     <li>使用bootstrap框架完成项目的构建</li>
                                     <li>首页界面的展示以及动画效果</li>
@@ -341,17 +341,17 @@
 
                             <div class="cd-timeline-content service-box-content">
                                 <h2>工作经验</h2>
-                                 <li>公司:广东新快报媒体发展有限公司</li>
+			            <li><h4 style='color:#000;font-weight: bolder;'>公司:深圳尚城信息</h4></li>
                                     <li>职务:前端工程师</li>
-                                    <li>工作时间:2015.7——2016.1</li>
+                                    <li>工作时间:2015.10——2016.10</li>
                                     <li>工作职能:</li>
                                      <li>1.负责产品设计的前端开发工作，将设计原图转换成最终 WEB 界面；</li>
                                 <li> 2.持续的优化前端体验和页面响应速度，并保证兼容性和执行效率；</li>
                                 <li> 3.根据功能需求，定义和优化产品用户体验及交互效果 。</li>
                                 <br>
-                                <li>公司:广州卓勤科技有限公司</li>
+                                <li><h4 style='color:#000;font-weight: bolder;'>公司:广州米石科技</h4></li>
                                 <li>职务:前端工程师</li>
-                                <li>工作时间:2016.3——2017.6 </li>
+                                <li>工作时间:2016.12——2017.6 </li>
                                 <li>工作职能:</li>
                                 <li>1、负责相关的产品，使用 HTML（HTML5 css3）标记 div+css+javascript
                                     Dom 操作等前端 WEB 技术进行网站的开发与制造；</li>
